[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/found_bugs/interrogation.gd" type="Script" id=1]
[ext_resource path="res://images/background-transparent-1.png" type="Texture" id=2]
[ext_resource path="res://scripts/found_bugs/bugs_script.gd" type="Script" id=3]

[node name="interrogation" type="Node"]
script = ExtResource( 1 )

[node name="color_background" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 800.0
color = Color( 0, 0.694118, 0.627451, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="programming_bg" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 800.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="picture" type="TextureRect" parent="."]
margin_left = 40.0
margin_top = 70.0
margin_right = 460.0
margin_bottom = 490.0
size_flags_horizontal = 2
size_flags_vertical = 2
expand = true

[node name="text_box" type="ColorRect" parent="."]
margin_left = 32.0
margin_top = 568.0
margin_right = 768.0
margin_bottom = 768.0

[node name="bugs_name" type="RichTextLabel" parent="text_box"]
margin_left = 10.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 50.0

[node name="dialogue" type="RichTextLabel" parent="text_box"]
margin_left = 10.0
margin_top = 60.0
margin_right = 728.0
margin_bottom = 190.0

[node name="script" type="Node" parent="text_box"]
script = ExtResource( 3 )

[node name="options" type="ColorRect" parent="."]
margin_left = 480.0
margin_top = 70.0
margin_right = 768.0
margin_bottom = 530.0

[node name="option_buttons" type="VBoxContainer" parent="options"]
margin_right = 290.0
margin_bottom = 460.0
alignment = 1

[node name="first" type="Button" parent="options/option_buttons"]
margin_top = 196.0
margin_right = 290.0
margin_bottom = 216.0
flat = true

[node name="second" type="Button" parent="options/option_buttons"]
margin_top = 220.0
margin_right = 290.0
margin_bottom = 240.0
flat = true

[node name="third" type="Button" parent="options/option_buttons"]
margin_top = 244.0
margin_right = 290.0
margin_bottom = 264.0
flat = true
